--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Favorite Color</title>
+  </head>
+  <body>
+    <a href="page1.html">HTML Images</a>
+    <a href="page2.html">HTML Images</a>
+    <a href="page3.html">HTML Images</a>
 
+    <form action='/response'>
+      What is your favorite color?<br>
+      <input type="text" name="color">
+      <br><br>
+      <input type="submit">
+    </form>
+
+  </body>
+</html>
