--- a/templates/home.html
+++ b/templates/home.html
@@ -4,16 +4,8 @@
     <title>Favorite Color</title>
   </head>
   <body>
-    <a href="page1.html">HTML Images</a>
-    <a href="page2.html">HTML Images</a>
-    <a href="page3.html">HTML Images</a>
-
-    <form action='/response'>
-      What is your favorite color?<br>
-      <input type="text" name="color">
-      <br><br>
-      <input type="submit">
-    </form>
-
+    <a href="page1.html">yards to meters</a>
+    <a href="page2.html">inches to centimeters</a>
+    <a href="page3.html">miles to kilometers</a>
   </body>
 </html>
