--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
     <title>Favorite Color</title>
   </head>
   <body>
-    <a href="page1.html">yards to meters</a>
-    <a href="page2.html">inches to centimeters</a>
-    <a href="page3.html">miles to kilometers</a>
+    <a href="/home1">yards to meters</a>
+    <a href="/home2">inches to centimeters</a>
+    <a href="/home3">miles to kilometers</a>
   </body>
 </html>
