--- a/templates/home1.html
+++ b/templates/home1.html
@@ -6,7 +6,7 @@
   <body>
 
     <form action='/response'>
-      What is your favorite color?<br>
+      How many yards?<br>
       <input type="text" name="color">
       <br><br>
       <input type="submit">
