--- a/templates/home2.html
+++ b/templates/home2.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Favorite Color</title>
+  </head>
+  <body>
 
+    <form action='/response'>
+      How many inches?<br>
+      <input type="text" name="color">
+      <br><br>
+      <input type="submit">
+    </form>
+
+  </body>
+</html>
