--- a/templates/home2.html
+++ b/templates/home2.html
@@ -7,7 +7,7 @@
 
     <form action='/response'>
       How many inches?<br>
-      <input type="text" name="color">
+      <input type="text" name="integer2">
       <br><br>
       <input type="submit">
     </form>
