--- a/templates/home1.html
+++ b/templates/home1.html
@@ -7,7 +7,7 @@
 
     <form action='/response'>
       How many yards?<br>
-      <input type="text" name="integer">
+      <input type="text" name="integer1">
       <br><br>
       <input type="submit">
     </form>
