--- a/templates/page3.html
+++ b/templates/page3.html
@@ -7,7 +7,7 @@
 
     <form action='/response'>
       What is your favorite color?<br>
-      <input type="text" name="color">
+      <input type="text" name="integer3">
       <br><br>
       <input type="submit">
     </form>
