--- a/templates/page3.html
+++ b/templates/page3.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Favorite Color</title>
+    <title>Response</title>
   </head>
   <body>
-
-    <form action='/response'>
-      What is your favorite color?<br>
-      <input type="text" name="color">
-      <br><br>
-      <input type="submit">
-    </form>
-
+    <h1>Response:</h1>
+    <p>{{ response }}</p>
   </body>
 </html>
