--- a/templates/home1.html
+++ b/templates/home1.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Favorite Color</title>
-  </head>
+{% extends "layout.html" %}
+{% set active_page = "Intigral Functions" %}
+{% block title %}Integral Functions{% endblock %}
+{% block content %}
   <body>
 
     <form action='/response'>
@@ -13,4 +12,4 @@
     </form>
 
   </body>
-</html>
+
