--- a/templates/home1.html
+++ b/templates/home1.html
@@ -1,8 +1,8 @@
-{% extends "layout.html" %}
+{% extends "layout_home.html" %}
 {% set active_page = "Intigral Functions" %}
 {% block title %}Integral Functions{% endblock %}
 {% block content %}
-  <body>
+
 
     <form action='/response'>
       How many yards?<br>
@@ -11,5 +11,5 @@
       <input type="submit">
     </form>
 
-  </body>
+{% endblock %}
 
