--- a/templates/home2.html
+++ b/templates/home2.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Favorite Color</title>
-  </head>
-  <body>
+
+{% extends "layout_home.html" %}
+{% set active_page = "Intigral Functions" %}
+{% block title %}Integral Functions{% endblock %}
+{% block content %}
 
     <form action='/response'>
       How many inches?<br>
@@ -12,5 +11,5 @@
       <input type="submit">
     </form>
 
-  </body>
-</html>
+
+{% endblock %}
