--- a/templates/home1.html
+++ b/templates/home1.html
@@ -1,6 +1,6 @@
 {% extends "layout_home.html" %}
 {% set active_page = "Intigral Functions" %}
-{% block title %}Integral Functions{% endblock %}
+{% block title %}Yards to Meters{% endblock %}
 {% block content %}
 
 
