--- a/templates/home2.html
+++ b/templates/home2.html
@@ -1,6 +1,6 @@
 {% extends "layout_home.html" %}
 {% set active_page = "Intigral Functions" %}
-{% block title %}Integral Functions{% endblock %}
+{% block title %}Inches to centimeters{% endblock %}
 {% block content %}
 
     <form action='/response'>
