--- a/templates/home1.html
+++ b/templates/home1.html
@@ -1,5 +1,5 @@
 {% extends "layout_home.html" %}
-{% set active_page = "Intigral Functions" %}
+{% set active_page = "home1" %}
 {% block title %}Yards to Meters{% endblock %}
 {% block content %}
 
