--- a/templates/home2.html
+++ b/templates/home2.html
@@ -1,5 +1,5 @@
 {% extends "layout_home.html" %}
-{% set active_page = "Intigral Functions" %}
+{% set active_page = "home2" %}
 {% block title %}Inches to centimeters{% endblock %}
 {% block content %}
 
