--- a/templates/home3.html
+++ b/templates/home3.html
@@ -1,5 +1,5 @@
 {% extends "layout_home.html" %}
-{% set active_page = "h3" %}
+{% set active_page = "home3" %}
 {% block title %}Miles to Kilometers{% endblock %}
 {% block content %}
 
