--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
     <title>Conversions</title>
   </head>
   <body>
-    <a href="home1.html">yards to meters</a>
-    <a href="home2.html">inches to centimeters</a>
-    <a href="home3.html">miles to kilometers</a>
+    <a href="h1">yards to meters</a>
+    <a href="h2">inches to centimeters</a>
+    <a href="h3">miles to kilometers</a>
   </body>
 </html>
