--- a/templates/page1.html
+++ b/templates/page1.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_pages.html" %}
 {% set active_page = "page1" %}
 {% block title %}page1{% endblock %}
 {% block content %}
