--- a/templates/page2.html
+++ b/templates/page2.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_pages.html" %}
 {% set active_page = "page2" %}
 {% block title %}page2{% endblock %}
 {% block content %}
