--- a/templates/page3.html
+++ b/templates/page3.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_pages.html" %}
 {% set active_page = "page3" %}
 {% block title %}page3{% endblock %}
 {% block content %}
