--- a/templates/home1.html
+++ b/templates/home1.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-    <form action='/response'>
+    <form action='/p1'>
       How many yards?<br>
       <input type="text" name="integer1">
       <br><br>
