--- a/templates/home2.html
+++ b/templates/home2.html
@@ -3,7 +3,7 @@
 {% block title %}Inches to centimeters{% endblock %}
 {% block content %}
 
-    <form action='/response'>
+    <form action='/p2'>
       How many inches?<br>
       <input type="text" name="integer2">
       <br><br>
