--- a/templates/home3.html
+++ b/templates/home3.html
@@ -3,7 +3,7 @@
 {% block title %}Miles to Kilometers{% endblock %}
 {% block content %}
 
-    <form action='/response'>
+    <form action='/p3'>
       How many miles?<br>
       <input type="text" name="integer3">
       <br><br>
