--- a/templates/layout_home.html
+++ b/templates/layout_home.html
@@ -5,9 +5,9 @@
   </head>
   <body>
   
-     <li {% if active_page == "home1" %} class = "active"{% endif %}><a href="h1">home1</a></li>
-     <li {% if active_page == "home2" %} class = "active"{% endif %}><a href="h2">home2</a></li>
-     <li {% if active_page == "home3" %} class = "active"{% endif %}><a href="h3">home3</a></li>
+     <li {% if active_page == "home1" %} class = "active"{% endif %}><a href="h1">yards to meters</a></li>
+     <li {% if active_page == "home2" %} class = "active"{% endif %}><a href="h2">inches to centimeters</a></li>
+     <li {% if active_page == "home3" %} class = "active"{% endif %}><a href="h3">miles to kilometers</a></li>
      {% block content %}{% endblock %}
 
   </body>
