--- a/templates/home1.html
+++ b/templates/home1.html
@@ -4,8 +4,9 @@
 {% block content %}
 
 
-    <form action='/p1'>
-      How many yards?<br>
+ 
+    <form action="/submit" method="POST" >
+    How many yards?<br>
       <input type="text" name="integer1">
       <br><br>
       <input type="submit">
