--- a/templates/home1.html
+++ b/templates/home1.html
@@ -5,7 +5,7 @@
 
 
  
-    <form action="/submit" method="POST" >
+    <form action="/submit" method='post' >
     How many yards?<br>
       <input type="text" name="integer1">
       <br><br>
